--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,6 @@ INCLUDE(Settings.cmake)
 
 # Process code in each subdirectories
 ADD_SUBDIRECTORY(src)
-ADD_SUBDIRECTORY(tools)
+ADD_SUBDIRECTORY(tools EXCLUDE_FROM_ALL)
 ADD_SUBDIRECTORY(tests EXCLUDE_FROM_ALL)
 ADD_SUBDIRECTORY(examples EXCLUDE_FROM_ALL)
