--- a/.travis.yml
+++ b/.travis.yml
@@ -1,60 +1,44 @@
 language: cpp
-sudo: true
-before_install:
-    - sudo apt-get -qq update
+sudo: false
 virtualenv:
   system_site_packages: true
-branches:
-    only:
-        - travis_ci
-addons:
-    apt:
-        sources:
-            - ubuntu-toolchain-r-test
-            - george-edison55-precise-backports
-        packages:
-            - g++-4.9
-            - cmake
-            - cmake-data
-            - libcgal-dev
-            - libgmp-dev
-            #- libumfpack5.6.2
-            - python-numpy
-            - python-scipy
-            - python-setuptools
-            - swig
-script:
-    - wget http://repo.continuum.io/miniconda/Miniconda-3.8.3-Linux-x86_64.sh -O miniconda.sh
-    - chmod +x miniconda.sh
-    - bash miniconda.sh -b -p $HOME/miniconda
-    - export PATH="$HOME/miniconda/bin:$PATH"
-    - hash -r
-    - conda config --set always_yes yes --set changeps1 no
-    - conda update -q conda
-    - conda info -a
-    - conda install --yes numpy=1.8
-    - conda install --yes scipy
-    - conda install --yes setuptools
-    - git checkout travis_ci
-    - git submodule update --init --recursive
-    - mkdir third_party/build
-    - cd third_party/build
-    - cmake -DCMAKE_C_COMPILER=gcc-4.9 -DCMAKE_CXX_COMPILER=g++-4.9 ..
-    - make
-    - make install
-    - cd ../..
-    - mkdir -p build
-    - cd build
-    - python --version
-    - python -c "import numpy as n; print(n.__version__); print(n.get_include());"
-    - cmake -DCMAKE_C_COMPILER=gcc-4.9 -DCMAKE_CXX_COMPILER=g++-4.9 ..
-    - make
-    - make tools
-    - ./setup.py build
-    - ./setup.py install --user
-env:
-    - PYMESH_PATH=$TRAVIS_BUILD_DIR
-after_success:
-    - cd build
-    - make all_tests
-    - python -c "import pymesh; pymesh.test()"
+python:
+    - "2.7"
+matrix:
+  include:
+    - os: osx
+      osx_image: xcode7.3 # OS X 10.11.1
+      compiler: clang
+      before_install:
+        - sw_vers -productVersion
+        - brew update
+        - brew outdated cmake || brew upgrade cmake
+        - brew outdated cgal || brew upgrade cgal
+        - brew install swig
+        - brew install python
+        - which python
+        - python --version
+        - which pip
+      install:
+        - pip install -r python/requirements.txt
+        - git submodule update --init --recursive
+        - mkdir third_party/build
+        - cd third_party/build
+        - cmake ..
+        - make
+        - make install
+        - cd ../..
+      script:
+        - mkdir build
+        - cd build
+        - cmake ..
+        - make
+        - make tools
+        - cd ..
+        - ./setup.py install
+      after_success:
+        - cd build
+        - make all_tests
+        - cd ..
+        - python -c "import pymesh; pymesh.test()"
+
