--- a/.travis.yml
+++ b/.travis.yml
@@ -9,36 +9,8 @@ matrix:
     - os: osx
       osx_image: xcode7.3 # OS X 10.11.1
       compiler: clang
-      before_install:
-        - sw_vers -productVersion
-        - brew update
-        - brew outdated cmake || brew upgrade cmake
-        - brew outdated cgal || brew upgrade cgal
-        - brew install swig
-        - brew install python
-        - which python
-        - python --version
-        - which pip
-      install:
-        - pip install -r python/requirements.txt
-        - git submodule update --init --recursive
-        - mkdir third_party/build
-        - cd third_party/build
-        - cmake ..
-        - make
-        - make install
-        - cd ../..
-      script:
-        - mkdir build
-        - cd build
-        - cmake ..
-        - make
-        - make tools
-        - cd ..
-        - ./setup.py install
-      after_success:
-        - cd build
-        - make all_tests
-        - cd ..
-        - python -c "import pymesh; pymesh.test()"
+      before_install: ./install_osx_dependencies.sh
+      install: ./install_dependencies.sh
+      script: ./build.sh
+      after_success: ./test_installation.sh
 
