--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,29 @@ matrix:
     - os: osx
       osx_image: xcode7.3 # OS X 10.11.1
       compiler: clang
-      before_install: ./install_osx_dependencies.sh
-      install: ./install_dependencies.sh
-      script: ./build.sh
-      after_success: ./test_installation.sh
+      install:
+        - brew update
+        - brew outdated cmake || brew upgrade cmake
+        - brew outdated cgal || brew upgrade cgal
+        - brew install swig
+        - brew install python
+        - pip install -r python/requirements.txt
+        - git submodule update --init --recursive
+        - mkdir third_party/build
+        - cd third_party/build
+        - cmake ..
+        - make
+        - make install
+        - cd ../..
+        - mkdir build
+        - cd build
+        - cmake ..
+        - make
+        - make tools
+        - cd ..
+        - ./setup.py install
+        - cd build
+        - make all_tests
+        - cd ..
+        - python -c "import pymesh; pymesh.test()"
 
