--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,11 @@ matrix:
       compiler: clang
       install:
         - brew update
+        - brew install python
+        - brew install boost --with-python
         - brew outdated cmake || brew upgrade cmake
         - brew outdated cgal || brew upgrade cgal
         - brew install swig
-        - brew install python
         - pip install -r python/requirements.txt
         - git submodule update --init --recursive
         - mkdir third_party/build
